--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "google-auth-library": "^9.0.0",
     "google-spreadsheet": "^4.1.1",
+    "googleapis": "^144.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
